# mcp

./: .gitignore  ARCHITECTURE.md  CODE_QUALITY_FIXES.md  CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_DIAGNOSTIC_PROMPT.md  PHASE_1_2_VERIFICATION.md  PHASE_1_QUICKSTART.md  PHASE_2_IMPLEMENTATION_PROMPT.md  PHASE_3_IMPLEMENTATION_PROMPT.md  PHASE_4_IMPLEMENTATION_PROMPT.md  PHASE_7_IMPLEMENTATION_PROMPT.md  PLANNING_DOCUMENTATION.md  PREPROCESSING.md  PREPROCESSING_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_MCP.md  RESTRUCTURING_PHASES_REFERENCE.md  RESTRUCTURING_PLAN.md  RUNTIME.md  audit.md  duckdb.md  kgen.trace.json.time-trace  max-cli.md  mcp.md  pixi.md  pixi.toml  project.md  prompt.md  pyproject.toml  requirements.md  scrapy.md  search.py  server.py  session-notes.md  test_config.py
.github/: .memory.md  copilot-instructions.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CREATING_NEW_MCP.md  QUICKSTART.md  SETUP_PIXI.md  SETUP_VENV.md  USING_MCP_SERVER.md
docs/archive/: DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_IMPLEMENTATION_PROMPT.md  README.md  (+6 more)
embedding/: README.md  consolidate_data.py  create_indexes.py  generate_embeddings.py  load_to_ducklake.py  main.db
logs/: test.md
mcp_server/: server.py
processed_docs/: manifest.json  mojo_manual_embeddings.parquet
reference/: agents.md  duckdb-fts.md  duckdb-python.md  duckdb-vss.md  ducklake.md  vector.md
runtime/: README.md  pixi.toml  search.py
shared/: README.md  config_loader.py
tools/: README.md  build_mcp.sh  scaffold_new_mcp.sh  sync_documentation.sh
(+203 files in other folders)
